# DrowPocker

./: CMakeList.txt  CMakeLists.txt  DrowPocker.cbp  DrowPocker.depend  DrowPocker.layout  DrowPocker.pro  DrowPocker.pro.user.2.5pre1  card.cpp  card.h  closed_card.cpp  closed_card.h  game.cpp  game.h  human_player.cpp  human_player.h  main.cpp  open_card.cpp  open_card.h  player.cpp  player.h
